// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`json_encoding.sql > line 1 1`] = `[Error: syntax error at or near "\\"]`;

exports[`json_encoding.sql > line 13 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 92,
                "val": {
                  "TypeCast": {
                    "arg": {
                      "A_Const": {
                        "location": 92,
                        "sval": {
                          "sval": ""\\u"",
                        },
                      },
                    },
                    "location": 98,
                    "typeName": {
                      "location": 100,
                      "names": [
                        {
                          "String": {
                            "sval": "json",
                          },
                        },
                      ],
                      "typemod": -1,
                    },
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`json_encoding.sql > line 18 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 38,
                "val": {
                  "TypeCast": {
                    "arg": {
                      "A_Const": {
                        "location": 38,
                        "sval": {
                          "sval": ""\\u00"",
                        },
                      },
                    },
                    "location": 46,
                    "typeName": {
                      "location": 48,
                      "names": [
                        {
                          "String": {
                            "sval": "json",
                          },
                        },
                      ],
                      "typemod": -1,
                    },
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`json_encoding.sql > line 19 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 38,
                "val": {
                  "TypeCast": {
                    "arg": {
                      "A_Const": {
                        "location": 38,
                        "sval": {
                          "sval": ""\\u000g"",
                        },
                      },
                    },
                    "location": 48,
                    "typeName": {
                      "location": 50,
                      "names": [
                        {
                          "String": {
                            "sval": "json",
                          },
                        },
                      ],
                      "typemod": -1,
                    },
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`json_encoding.sql > line 20 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 40,
                "val": {
                  "TypeCast": {
                    "arg": {
                      "A_Const": {
                        "location": 40,
                        "sval": {
                          "sval": ""\\u0000"",
                        },
                      },
                    },
                    "location": 50,
                    "typeName": {
                      "location": 52,
                      "names": [
                        {
                          "String": {
                            "sval": "json",
                          },
                        },
                      ],
                      "typemod": -1,
                    },
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`json_encoding.sql > line 21 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 29,
                "val": {
                  "TypeCast": {
                    "arg": {
                      "A_Const": {
                        "location": 29,
                        "sval": {
                          "sval": ""\\uaBcD"",
                        },
                      },
                    },
                    "location": 39,
                    "typeName": {
                      "location": 41,
                      "names": [
                        {
                          "String": {
                            "sval": "json",
                          },
                        },
                      ],
                      "typemod": -1,
                    },
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`json_encoding.sql > line 22 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 90,
                "name": "correct_in_utf8",
                "val": {
                  "A_Expr": {
                    "kind": "AEXPR_OP",
                    "lexpr": {
                      "TypeCast": {
                        "arg": {
                          "A_Const": {
                            "location": 95,
                            "sval": {
                              "sval": "{ "a":  "\\ud83d\\ude04\\ud83d\\udc36" }",
                            },
                          },
                        },
                        "location": -1,
                        "typeName": {
                          "location": 90,
                          "names": [
                            {
                              "String": {
                                "sval": "json",
                              },
                            },
                          ],
                          "typemod": -1,
                        },
                      },
                    },
                    "location": 134,
                    "name": [
                      {
                        "String": {
                          "sval": "->",
                        },
                      },
                    ],
                    "rexpr": {
                      "A_Const": {
                        "location": 137,
                        "sval": {
                          "sval": "a",
                        },
                      },
                    },
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`json_encoding.sql > line 27 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 8,
                "val": {
                  "A_Expr": {
                    "kind": "AEXPR_OP",
                    "lexpr": {
                      "TypeCast": {
                        "arg": {
                          "A_Const": {
                            "location": 13,
                            "sval": {
                              "sval": "{ "a":  "\\ud83d\\ud83d" }",
                            },
                          },
                        },
                        "location": -1,
                        "typeName": {
                          "location": 8,
                          "names": [
                            {
                              "String": {
                                "sval": "json",
                              },
                            },
                          ],
                          "typemod": -1,
                        },
                      },
                    },
                    "location": 40,
                    "name": [
                      {
                        "String": {
                          "sval": "->",
                        },
                      },
                    ],
                    "rexpr": {
                      "A_Const": {
                        "location": 43,
                        "sval": {
                          "sval": "a",
                        },
                      },
                    },
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`json_encoding.sql > line 27 2`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 38,
                "val": {
                  "A_Expr": {
                    "kind": "AEXPR_OP",
                    "lexpr": {
                      "TypeCast": {
                        "arg": {
                          "A_Const": {
                            "location": 43,
                            "sval": {
                              "sval": "{ "a":  "\\ude04\\ud83d" }",
                            },
                          },
                        },
                        "location": -1,
                        "typeName": {
                          "location": 38,
                          "names": [
                            {
                              "String": {
                                "sval": "json",
                              },
                            },
                          ],
                          "typemod": -1,
                        },
                      },
                    },
                    "location": 70,
                    "name": [
                      {
                        "String": {
                          "sval": "->",
                        },
                      },
                    ],
                    "rexpr": {
                      "A_Const": {
                        "location": 73,
                        "sval": {
                          "sval": "a",
                        },
                      },
                    },
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`json_encoding.sql > line 28 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 37,
                "val": {
                  "A_Expr": {
                    "kind": "AEXPR_OP",
                    "lexpr": {
                      "TypeCast": {
                        "arg": {
                          "A_Const": {
                            "location": 42,
                            "sval": {
                              "sval": "{ "a":  "\\ud83dX" }",
                            },
                          },
                        },
                        "location": -1,
                        "typeName": {
                          "location": 37,
                          "names": [
                            {
                              "String": {
                                "sval": "json",
                              },
                            },
                          ],
                          "typemod": -1,
                        },
                      },
                    },
                    "location": 64,
                    "name": [
                      {
                        "String": {
                          "sval": "->",
                        },
                      },
                    ],
                    "rexpr": {
                      "A_Const": {
                        "location": 67,
                        "sval": {
                          "sval": "a",
                        },
                      },
                    },
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`json_encoding.sql > line 29 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 33,
                "val": {
                  "A_Expr": {
                    "kind": "AEXPR_OP",
                    "lexpr": {
                      "TypeCast": {
                        "arg": {
                          "A_Const": {
                            "location": 38,
                            "sval": {
                              "sval": "{ "a":  "\\ude04X" }",
                            },
                          },
                        },
                        "location": -1,
                        "typeName": {
                          "location": 33,
                          "names": [
                            {
                              "String": {
                                "sval": "json",
                              },
                            },
                          ],
                          "typemod": -1,
                        },
                      },
                    },
                    "location": 60,
                    "name": [
                      {
                        "String": {
                          "sval": "->",
                        },
                      },
                    ],
                    "rexpr": {
                      "A_Const": {
                        "location": 63,
                        "sval": {
                          "sval": "a",
                        },
                      },
                    },
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`json_encoding.sql > line 30 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 71,
                "name": "correct_in_utf8",
                "val": {
                  "TypeCast": {
                    "arg": {
                      "A_Const": {
                        "location": 76,
                        "sval": {
                          "sval": "{ "a":  "the Copyright \\u00a9 sign" }",
                        },
                      },
                    },
                    "location": -1,
                    "typeName": {
                      "location": 71,
                      "names": [
                        {
                          "String": {
                            "sval": "json",
                          },
                        },
                      ],
                      "typemod": -1,
                    },
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`json_encoding.sql > line 35 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 8,
                "name": "correct_everywhere",
                "val": {
                  "TypeCast": {
                    "arg": {
                      "A_Const": {
                        "location": 13,
                        "sval": {
                          "sval": "{ "a":  "dollar \\u0024 character" }",
                        },
                      },
                    },
                    "location": -1,
                    "typeName": {
                      "location": 8,
                      "names": [
                        {
                          "String": {
                            "sval": "json",
                          },
                        },
                      ],
                      "typemod": -1,
                    },
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`json_encoding.sql > line 36 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 8,
                "name": "not_an_escape",
                "val": {
                  "TypeCast": {
                    "arg": {
                      "A_Const": {
                        "location": 13,
                        "sval": {
                          "sval": "{ "a":  "dollar \\\\u0024 character" }",
                        },
                      },
                    },
                    "location": -1,
                    "typeName": {
                      "location": 8,
                      "names": [
                        {
                          "String": {
                            "sval": "json",
                          },
                        },
                      ],
                      "typemod": -1,
                    },
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`json_encoding.sql > line 37 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 8,
                "name": "not_unescaped",
                "val": {
                  "TypeCast": {
                    "arg": {
                      "A_Const": {
                        "location": 13,
                        "sval": {
                          "sval": "{ "a":  "null \\u0000 escape" }",
                        },
                      },
                    },
                    "location": -1,
                    "typeName": {
                      "location": 8,
                      "names": [
                        {
                          "String": {
                            "sval": "json",
                          },
                        },
                      ],
                      "typemod": -1,
                    },
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`json_encoding.sql > line 38 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 8,
                "name": "not_an_escape",
                "val": {
                  "TypeCast": {
                    "arg": {
                      "A_Const": {
                        "location": 13,
                        "sval": {
                          "sval": "{ "a":  "null \\\\u0000 escape" }",
                        },
                      },
                    },
                    "location": -1,
                    "typeName": {
                      "location": 8,
                      "names": [
                        {
                          "String": {
                            "sval": "json",
                          },
                        },
                      ],
                      "typemod": -1,
                    },
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`json_encoding.sql > line 39 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 9,
                "name": "correct_in_utf8",
                "val": {
                  "A_Expr": {
                    "kind": "AEXPR_OP",
                    "lexpr": {
                      "TypeCast": {
                        "arg": {
                          "A_Const": {
                            "location": 14,
                            "sval": {
                              "sval": "{ "a":  "the Copyright \\u00a9 sign" }",
                            },
                          },
                        },
                        "location": -1,
                        "typeName": {
                          "location": 9,
                          "names": [
                            {
                              "String": {
                                "sval": "json",
                              },
                            },
                          ],
                          "typemod": -1,
                        },
                      },
                    },
                    "location": 54,
                    "name": [
                      {
                        "String": {
                          "sval": "->>",
                        },
                      },
                    ],
                    "rexpr": {
                      "A_Const": {
                        "location": 58,
                        "sval": {
                          "sval": "a",
                        },
                      },
                    },
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`json_encoding.sql > line 41 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 8,
                "name": "correct_everywhere",
                "val": {
                  "A_Expr": {
                    "kind": "AEXPR_OP",
                    "lexpr": {
                      "TypeCast": {
                        "arg": {
                          "A_Const": {
                            "location": 13,
                            "sval": {
                              "sval": "{ "a":  "dollar \\u0024 character" }",
                            },
                          },
                        },
                        "location": -1,
                        "typeName": {
                          "location": 8,
                          "names": [
                            {
                              "String": {
                                "sval": "json",
                              },
                            },
                          ],
                          "typemod": -1,
                        },
                      },
                    },
                    "location": 51,
                    "name": [
                      {
                        "String": {
                          "sval": "->>",
                        },
                      },
                    ],
                    "rexpr": {
                      "A_Const": {
                        "location": 55,
                        "sval": {
                          "sval": "a",
                        },
                      },
                    },
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`json_encoding.sql > line 42 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 8,
                "name": "not_an_escape",
                "val": {
                  "A_Expr": {
                    "kind": "AEXPR_OP",
                    "lexpr": {
                      "TypeCast": {
                        "arg": {
                          "A_Const": {
                            "location": 13,
                            "sval": {
                              "sval": "{ "a":  "dollar \\\\u0024 character" }",
                            },
                          },
                        },
                        "location": -1,
                        "typeName": {
                          "location": 8,
                          "names": [
                            {
                              "String": {
                                "sval": "json",
                              },
                            },
                          ],
                          "typemod": -1,
                        },
                      },
                    },
                    "location": 52,
                    "name": [
                      {
                        "String": {
                          "sval": "->>",
                        },
                      },
                    ],
                    "rexpr": {
                      "A_Const": {
                        "location": 56,
                        "sval": {
                          "sval": "a",
                        },
                      },
                    },
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`json_encoding.sql > line 43 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 8,
                "name": "fails",
                "val": {
                  "A_Expr": {
                    "kind": "AEXPR_OP",
                    "lexpr": {
                      "TypeCast": {
                        "arg": {
                          "A_Const": {
                            "location": 13,
                            "sval": {
                              "sval": "{ "a":  "null \\u0000 escape" }",
                            },
                          },
                        },
                        "location": -1,
                        "typeName": {
                          "location": 8,
                          "names": [
                            {
                              "String": {
                                "sval": "json",
                              },
                            },
                          ],
                          "typemod": -1,
                        },
                      },
                    },
                    "location": 46,
                    "name": [
                      {
                        "String": {
                          "sval": "->>",
                        },
                      },
                    ],
                    "rexpr": {
                      "A_Const": {
                        "location": 50,
                        "sval": {
                          "sval": "a",
                        },
                      },
                    },
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`json_encoding.sql > line 44 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 8,
                "name": "not_an_escape",
                "val": {
                  "A_Expr": {
                    "kind": "AEXPR_OP",
                    "lexpr": {
                      "TypeCast": {
                        "arg": {
                          "A_Const": {
                            "location": 13,
                            "sval": {
                              "sval": "{ "a":  "null \\\\u0000 escape" }",
                            },
                          },
                        },
                        "location": -1,
                        "typeName": {
                          "location": 8,
                          "names": [
                            {
                              "String": {
                                "sval": "json",
                              },
                            },
                          ],
                          "typemod": -1,
                        },
                      },
                    },
                    "location": 47,
                    "name": [
                      {
                        "String": {
                          "sval": "->>",
                        },
                      },
                    ],
                    "rexpr": {
                      "A_Const": {
                        "location": 51,
                        "sval": {
                          "sval": "a",
                        },
                      },
                    },
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`json_encoding.sql > line 45 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 47,
                "val": {
                  "TypeCast": {
                    "arg": {
                      "A_Const": {
                        "location": 47,
                        "sval": {
                          "sval": ""\\u"",
                        },
                      },
                    },
                    "location": 53,
                    "typeName": {
                      "location": 55,
                      "names": [
                        {
                          "String": {
                            "sval": "jsonb",
                          },
                        },
                      ],
                      "typemod": -1,
                    },
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`json_encoding.sql > line 49 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 38,
                "val": {
                  "TypeCast": {
                    "arg": {
                      "A_Const": {
                        "location": 38,
                        "sval": {
                          "sval": ""\\u00"",
                        },
                      },
                    },
                    "location": 46,
                    "typeName": {
                      "location": 48,
                      "names": [
                        {
                          "String": {
                            "sval": "jsonb",
                          },
                        },
                      ],
                      "typemod": -1,
                    },
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`json_encoding.sql > line 50 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 38,
                "val": {
                  "TypeCast": {
                    "arg": {
                      "A_Const": {
                        "location": 38,
                        "sval": {
                          "sval": ""\\u000g"",
                        },
                      },
                    },
                    "location": 48,
                    "typeName": {
                      "location": 50,
                      "names": [
                        {
                          "String": {
                            "sval": "jsonb",
                          },
                        },
                      ],
                      "typemod": -1,
                    },
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`json_encoding.sql > line 51 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 40,
                "val": {
                  "TypeCast": {
                    "arg": {
                      "A_Const": {
                        "location": 40,
                        "sval": {
                          "sval": ""\\u0045"",
                        },
                      },
                    },
                    "location": 50,
                    "typeName": {
                      "location": 52,
                      "names": [
                        {
                          "String": {
                            "sval": "jsonb",
                          },
                        },
                      ],
                      "typemod": -1,
                    },
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`json_encoding.sql > line 52 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 29,
                "val": {
                  "TypeCast": {
                    "arg": {
                      "A_Const": {
                        "location": 29,
                        "sval": {
                          "sval": ""\\u0000"",
                        },
                      },
                    },
                    "location": 39,
                    "typeName": {
                      "location": 41,
                      "names": [
                        {
                          "String": {
                            "sval": "jsonb",
                          },
                        },
                      ],
                      "typemod": -1,
                    },
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`json_encoding.sql > line 53 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 121,
                "val": {
                  "FuncCall": {
                    "args": [
                      {
                        "TypeCast": {
                          "arg": {
                            "TypeCast": {
                              "arg": {
                                "A_Const": {
                                  "location": 134,
                                  "sval": {
                                    "sval": ""\\uaBcD"",
                                  },
                                },
                              },
                              "location": 144,
                              "typeName": {
                                "location": 146,
                                "names": [
                                  {
                                    "String": {
                                      "sval": "jsonb",
                                    },
                                  },
                                ],
                                "typemod": -1,
                              },
                            },
                          },
                          "location": 151,
                          "typeName": {
                            "location": 153,
                            "names": [
                              {
                                "String": {
                                  "sval": "text",
                                },
                              },
                            ],
                            "typemod": -1,
                          },
                        },
                      },
                    ],
                    "funcformat": "COERCE_EXPLICIT_CALL",
                    "funcname": [
                      {
                        "String": {
                          "sval": "octet_length",
                        },
                      },
                    ],
                    "location": 121,
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`json_encoding.sql > line 56 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 89,
                "name": "correct_in_utf8",
                "val": {
                  "FuncCall": {
                    "args": [
                      {
                        "TypeCast": {
                          "arg": {
                            "A_Expr": {
                              "kind": "AEXPR_OP",
                              "lexpr": {
                                "TypeCast": {
                                  "arg": {
                                    "A_Const": {
                                      "location": 109,
                                      "sval": {
                                        "sval": "{ "a":  "\\ud83d\\ude04\\ud83d\\udc36" }",
                                      },
                                    },
                                  },
                                  "location": -1,
                                  "typeName": {
                                    "location": 103,
                                    "names": [
                                      {
                                        "String": {
                                          "sval": "jsonb",
                                        },
                                      },
                                    ],
                                    "typemod": -1,
                                  },
                                },
                              },
                              "location": 148,
                              "name": [
                                {
                                  "String": {
                                    "sval": "->",
                                  },
                                },
                              ],
                              "rexpr": {
                                "A_Const": {
                                  "location": 151,
                                  "sval": {
                                    "sval": "a",
                                  },
                                },
                              },
                            },
                          },
                          "location": 155,
                          "typeName": {
                            "location": 157,
                            "names": [
                              {
                                "String": {
                                  "sval": "text",
                                },
                              },
                            ],
                            "typemod": -1,
                          },
                        },
                      },
                    ],
                    "funcformat": "COERCE_EXPLICIT_CALL",
                    "funcname": [
                      {
                        "String": {
                          "sval": "octet_length",
                        },
                      },
                    ],
                    "location": 89,
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`json_encoding.sql > line 61 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 8,
                "val": {
                  "A_Expr": {
                    "kind": "AEXPR_OP",
                    "lexpr": {
                      "TypeCast": {
                        "arg": {
                          "A_Const": {
                            "location": 14,
                            "sval": {
                              "sval": "{ "a":  "\\ud83d\\ud83d" }",
                            },
                          },
                        },
                        "location": -1,
                        "typeName": {
                          "location": 8,
                          "names": [
                            {
                              "String": {
                                "sval": "jsonb",
                              },
                            },
                          ],
                          "typemod": -1,
                        },
                      },
                    },
                    "location": 41,
                    "name": [
                      {
                        "String": {
                          "sval": "->",
                        },
                      },
                    ],
                    "rexpr": {
                      "A_Const": {
                        "location": 44,
                        "sval": {
                          "sval": "a",
                        },
                      },
                    },
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`json_encoding.sql > line 61 2`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 38,
                "val": {
                  "A_Expr": {
                    "kind": "AEXPR_OP",
                    "lexpr": {
                      "TypeCast": {
                        "arg": {
                          "A_Const": {
                            "location": 44,
                            "sval": {
                              "sval": "{ "a":  "\\ude04\\ud83d" }",
                            },
                          },
                        },
                        "location": -1,
                        "typeName": {
                          "location": 38,
                          "names": [
                            {
                              "String": {
                                "sval": "jsonb",
                              },
                            },
                          ],
                          "typemod": -1,
                        },
                      },
                    },
                    "location": 71,
                    "name": [
                      {
                        "String": {
                          "sval": "->",
                        },
                      },
                    ],
                    "rexpr": {
                      "A_Const": {
                        "location": 74,
                        "sval": {
                          "sval": "a",
                        },
                      },
                    },
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`json_encoding.sql > line 62 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 37,
                "val": {
                  "A_Expr": {
                    "kind": "AEXPR_OP",
                    "lexpr": {
                      "TypeCast": {
                        "arg": {
                          "A_Const": {
                            "location": 43,
                            "sval": {
                              "sval": "{ "a":  "\\ud83dX" }",
                            },
                          },
                        },
                        "location": -1,
                        "typeName": {
                          "location": 37,
                          "names": [
                            {
                              "String": {
                                "sval": "jsonb",
                              },
                            },
                          ],
                          "typemod": -1,
                        },
                      },
                    },
                    "location": 65,
                    "name": [
                      {
                        "String": {
                          "sval": "->",
                        },
                      },
                    ],
                    "rexpr": {
                      "A_Const": {
                        "location": 68,
                        "sval": {
                          "sval": "a",
                        },
                      },
                    },
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`json_encoding.sql > line 63 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 33,
                "val": {
                  "A_Expr": {
                    "kind": "AEXPR_OP",
                    "lexpr": {
                      "TypeCast": {
                        "arg": {
                          "A_Const": {
                            "location": 39,
                            "sval": {
                              "sval": "{ "a":  "\\ude04X" }",
                            },
                          },
                        },
                        "location": -1,
                        "typeName": {
                          "location": 33,
                          "names": [
                            {
                              "String": {
                                "sval": "jsonb",
                              },
                            },
                          ],
                          "typemod": -1,
                        },
                      },
                    },
                    "location": 61,
                    "name": [
                      {
                        "String": {
                          "sval": "->",
                        },
                      },
                    ],
                    "rexpr": {
                      "A_Const": {
                        "location": 64,
                        "sval": {
                          "sval": "a",
                        },
                      },
                    },
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`json_encoding.sql > line 64 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 72,
                "name": "correct_in_utf8",
                "val": {
                  "TypeCast": {
                    "arg": {
                      "A_Const": {
                        "location": 78,
                        "sval": {
                          "sval": "{ "a":  "the Copyright \\u00a9 sign" }",
                        },
                      },
                    },
                    "location": -1,
                    "typeName": {
                      "location": 72,
                      "names": [
                        {
                          "String": {
                            "sval": "jsonb",
                          },
                        },
                      ],
                      "typemod": -1,
                    },
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`json_encoding.sql > line 69 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 8,
                "name": "correct_everywhere",
                "val": {
                  "TypeCast": {
                    "arg": {
                      "A_Const": {
                        "location": 14,
                        "sval": {
                          "sval": "{ "a":  "dollar \\u0024 character" }",
                        },
                      },
                    },
                    "location": -1,
                    "typeName": {
                      "location": 8,
                      "names": [
                        {
                          "String": {
                            "sval": "jsonb",
                          },
                        },
                      ],
                      "typemod": -1,
                    },
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`json_encoding.sql > line 70 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 8,
                "name": "not_an_escape",
                "val": {
                  "TypeCast": {
                    "arg": {
                      "A_Const": {
                        "location": 14,
                        "sval": {
                          "sval": "{ "a":  "dollar \\\\u0024 character" }",
                        },
                      },
                    },
                    "location": -1,
                    "typeName": {
                      "location": 8,
                      "names": [
                        {
                          "String": {
                            "sval": "jsonb",
                          },
                        },
                      ],
                      "typemod": -1,
                    },
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`json_encoding.sql > line 71 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 8,
                "name": "fails",
                "val": {
                  "TypeCast": {
                    "arg": {
                      "A_Const": {
                        "location": 14,
                        "sval": {
                          "sval": "{ "a":  "null \\u0000 escape" }",
                        },
                      },
                    },
                    "location": -1,
                    "typeName": {
                      "location": 8,
                      "names": [
                        {
                          "String": {
                            "sval": "jsonb",
                          },
                        },
                      ],
                      "typemod": -1,
                    },
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`json_encoding.sql > line 72 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 8,
                "name": "not_an_escape",
                "val": {
                  "TypeCast": {
                    "arg": {
                      "A_Const": {
                        "location": 14,
                        "sval": {
                          "sval": "{ "a":  "null \\\\u0000 escape" }",
                        },
                      },
                    },
                    "location": -1,
                    "typeName": {
                      "location": 8,
                      "names": [
                        {
                          "String": {
                            "sval": "jsonb",
                          },
                        },
                      ],
                      "typemod": -1,
                    },
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`json_encoding.sql > line 73 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 9,
                "name": "correct_in_utf8",
                "val": {
                  "A_Expr": {
                    "kind": "AEXPR_OP",
                    "lexpr": {
                      "TypeCast": {
                        "arg": {
                          "A_Const": {
                            "location": 15,
                            "sval": {
                              "sval": "{ "a":  "the Copyright \\u00a9 sign" }",
                            },
                          },
                        },
                        "location": -1,
                        "typeName": {
                          "location": 9,
                          "names": [
                            {
                              "String": {
                                "sval": "jsonb",
                              },
                            },
                          ],
                          "typemod": -1,
                        },
                      },
                    },
                    "location": 55,
                    "name": [
                      {
                        "String": {
                          "sval": "->>",
                        },
                      },
                    ],
                    "rexpr": {
                      "A_Const": {
                        "location": 59,
                        "sval": {
                          "sval": "a",
                        },
                      },
                    },
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`json_encoding.sql > line 75 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 8,
                "name": "correct_everywhere",
                "val": {
                  "A_Expr": {
                    "kind": "AEXPR_OP",
                    "lexpr": {
                      "TypeCast": {
                        "arg": {
                          "A_Const": {
                            "location": 14,
                            "sval": {
                              "sval": "{ "a":  "dollar \\u0024 character" }",
                            },
                          },
                        },
                        "location": -1,
                        "typeName": {
                          "location": 8,
                          "names": [
                            {
                              "String": {
                                "sval": "jsonb",
                              },
                            },
                          ],
                          "typemod": -1,
                        },
                      },
                    },
                    "location": 52,
                    "name": [
                      {
                        "String": {
                          "sval": "->>",
                        },
                      },
                    ],
                    "rexpr": {
                      "A_Const": {
                        "location": 56,
                        "sval": {
                          "sval": "a",
                        },
                      },
                    },
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`json_encoding.sql > line 76 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 8,
                "name": "not_an_escape",
                "val": {
                  "A_Expr": {
                    "kind": "AEXPR_OP",
                    "lexpr": {
                      "TypeCast": {
                        "arg": {
                          "A_Const": {
                            "location": 14,
                            "sval": {
                              "sval": "{ "a":  "dollar \\\\u0024 character" }",
                            },
                          },
                        },
                        "location": -1,
                        "typeName": {
                          "location": 8,
                          "names": [
                            {
                              "String": {
                                "sval": "jsonb",
                              },
                            },
                          ],
                          "typemod": -1,
                        },
                      },
                    },
                    "location": 53,
                    "name": [
                      {
                        "String": {
                          "sval": "->>",
                        },
                      },
                    ],
                    "rexpr": {
                      "A_Const": {
                        "location": 57,
                        "sval": {
                          "sval": "a",
                        },
                      },
                    },
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`json_encoding.sql > line 77 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 8,
                "name": "fails",
                "val": {
                  "A_Expr": {
                    "kind": "AEXPR_OP",
                    "lexpr": {
                      "TypeCast": {
                        "arg": {
                          "A_Const": {
                            "location": 14,
                            "sval": {
                              "sval": "{ "a":  "null \\u0000 escape" }",
                            },
                          },
                        },
                        "location": -1,
                        "typeName": {
                          "location": 8,
                          "names": [
                            {
                              "String": {
                                "sval": "jsonb",
                              },
                            },
                          ],
                          "typemod": -1,
                        },
                      },
                    },
                    "location": 47,
                    "name": [
                      {
                        "String": {
                          "sval": "->>",
                        },
                      },
                    ],
                    "rexpr": {
                      "A_Const": {
                        "location": 51,
                        "sval": {
                          "sval": "a",
                        },
                      },
                    },
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`json_encoding.sql > line 78 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 8,
                "name": "not_an_escape",
                "val": {
                  "A_Expr": {
                    "kind": "AEXPR_OP",
                    "lexpr": {
                      "TypeCast": {
                        "arg": {
                          "A_Const": {
                            "location": 14,
                            "sval": {
                              "sval": "{ "a":  "null \\\\u0000 escape" }",
                            },
                          },
                        },
                        "location": -1,
                        "typeName": {
                          "location": 8,
                          "names": [
                            {
                              "String": {
                                "sval": "jsonb",
                              },
                            },
                          ],
                          "typemod": -1,
                        },
                      },
                    },
                    "location": 48,
                    "name": [
                      {
                        "String": {
                          "sval": "->>",
                        },
                      },
                    ],
                    "rexpr": {
                      "A_Const": {
                        "location": 52,
                        "sval": {
                          "sval": "a",
                        },
                      },
                    },
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`json_encoding.sql > line 79 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "fromClause": [
            {
              "RangeFunction": {
                "functions": [
                  {
                    "List": {
                      "items": [
                        {
                          "FuncCall": {
                            "args": [
                              {
                                "A_Const": {
                                  "location": 74,
                                  "sval": {
                                    "sval": "{ "a":  "\\ud83d\\ude04\\ud83d\\udc36" }",
                                  },
                                },
                              },
                              {
                                "A_Const": {
                                  "location": 114,
                                  "sval": {
                                    "sval": "jsonb",
                                  },
                                },
                              },
                            ],
                            "funcformat": "COERCE_EXPLICIT_CALL",
                            "funcname": [
                              {
                                "String": {
                                  "sval": "pg_input_error_info",
                                },
                              },
                            ],
                            "location": 54,
                          },
                        },
                        {},
                      ],
                    },
                  },
                ],
              },
            },
          ],
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 47,
                "val": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "A_Star": {},
                      },
                    ],
                    "location": 47,
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;
